--- a/01-initial-model/requirements.txt
+++ b/01-initial-model/requirements.txt
@@ -3,5 +3,5 @@ matplotlib==3.5.1
 pandas==1.4.2
 numpy==1.21.5
 seaborn==0.11.2
-category_encoders==2.5.1.post0
+# category_encoders==2.5.1.post0
 imbalanced-learn
